--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
  <h1>Moons of Mars</h1>
    <img class="img-flex" src="images/deimos.jpg" alt="">
   <h2>Deimos</h2>
-  Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.
-  Discovered by: Asaph Hall
-  Discovery date: August 17, 1877
-  Adjectives: Deimosian
+  <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars.
+  With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
+  <dl class="facts">
+  <dt>Discovered by:</dt><dd>Asaph Hall</dd>
+  <dt>Discovery date:</dt><dd>August 17, 1877</dd>
+  <dt>Adjectives:</dt><dd>Deimosian</dd>
 
   Phobos
   Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km and is seven times more massive than the outer moon, Deimos.
