--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
   <h2>Deimos</h2>
   <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars.
   With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
-  <dl class="facts">
+<dl class="facts">
   <dt>Discovered by:</dt><dd>Asaph Hall</dd>
   <dt>Discovery date:</dt><dd>August 17, 1877</dd>
   <dt>Adjectives:</dt><dd>Deimosian</dd>
+</dl>
 
-  Phobos
-  Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km and is seven times more massive than the outer moon, Deimos.
-  Discovered by: Asaph Hall
-  Discovery date: August 17, 1877
-  Adjectives: Phobian
+  <img class="img-flex" src="images/Phobos.jpg" alt="">
+  <h2>Phobos</h2>
+  <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km
+  and is seven times more massive than the outer moon, Deimos.</p>
+  <dl class="facts">
+  <dt>Discovered by:</dt><dd>Asaph Hall</dd>
+  <dt>Discovery date:</dt><dd>August 17, 1877</dd>
+  <dt>Adjectives:</dt><dd>Phobian</dd>
+  </dl>
 
 </main>
 </body>
