--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Grid Layout</title>
+  <title>Grid Ception</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -10,29 +10,70 @@
 </head>
 <body>
 
-<main>
+  <main>
+  	  <div class="h1 text-center peta island-1-2 push">
+  	      <h2 class="push-0">Moons of Mars</h2>
+  	  </div>
 
- <h1>Moons of Mars</h1>
-   <img class="img-flex" src="images/deimos.jpg" alt="">
-  <h2>Deimos</h2>
-  <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars.
+  	  <div class="grid">
+  	    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
+  	      <div class="grid">
+  	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+  	          <div class="embed embed--1by1 push">
+  	            <img class="embed__item" src="images/deimos.jpg" alt="">
+  	          </div>
+  	        </div>
+
+  	        <div class="unit unit-xs-1 unit-s- unit-m-1 unit-l-1-2 gutter">
+  	          <h3 class="pad-t">Deimos</h3>
+  	          <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars.
   With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
-<dl class="facts">
-  <dt>Discovered by:</dt><dd>Asaph Hall</dd>
-  <dt>Discovery date:</dt><dd>August 17, 1877</dd>
-  <dt>Adjectives:</dt><dd>Deimosian</dd>
-</dl>
+  	        </div>
 
-  <img class="img-flex" src="images/Phobos.jpg" alt="">
-  <h2>Phobos</h2>
-  <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km
+  	        <div class="grid">
+  	          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
+  	            <dl>
+  	              <dt>Discovered by:</dt>
+  	              <dd>Asaph Hall/dd>
+  	              <dt>Discovery date:</dt>
+  	              <dd>August 17, 1877</dd>
+  	              <dt>Adjectives:</dt>
+  	              <dd>Deimosian</dd>
+  	            </dl>
+  	          </div>
+  	        </div>
+  	      </div>
+  	    </div>
+
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
+	      <div class="grid">
+	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+	          <div class="embed embed--1by1 push gutter">
+	            <img class="embed__item" src="images/Phobos.jpg" alt="">
+	          </div>
+	        </div>
+	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 gutter">
+	          <h3 class="pad-t">Phobos</h3>
+	          <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km
   and is seven times more massive than the outer moon, Deimos.</p>
-  <dl class="facts">
-  <dt>Discovered by:</dt><dd>Asaph Hall</dd>
-  <dt>Discovery date:</dt><dd>August 17, 1877</dd>
-  <dt>Adjectives:</dt><dd>Phobian</dd>
-  </dl>
+	        </div>
+	        <div class="grid">
+	          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
+	            <dl>
+	              <dt>Discovered by:</dt>
+	              <dd>Asaph Hall</dd>
+	              <dt>Discovery date:</dt>
+	              <dd>August 17, 1877</dd>
+	              <dt>Adjectives:</dt>
+	              <dd>Phobian</dd>
+	            </dl>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
 
 </main>
 </body>
+
 </html>
