--- a/index.html
+++ b/index.html
@@ -1,78 +1,85 @@
 <!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Grid Ception</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-</head>
-<body>
+	<html lang="en-ca">
+		<head>
+			<meta charset="utf-8">
+			<title>
+				Moons of Mars
+			</title>
+			<meta content="true" name="handheldfriendly">
+			<meta content="240" name="mobileoptimized">
+			<meta content="width=device-width, initial-scale=1" name="viewport">
+			<link href="css/modules.css" rel="stylesheet">
+			<link href="css/grid.css" rel="stylesheet">
+			<link href="css/typografier.css" rel="stylesheet">
+	    <link href="css/main.css" rel="stylesheet">
+		</head>
 
-  <main>
-  	  <div class="h1 text-center peta island-1-2 push">
-  	      <h2 class="push-0">Moons of Mars</h2>
-  	  </div>
 
-  	  <div class="grid">
-  	    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
-  	      <div class="grid">
-  	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-  	          <div class="embed embed--1by1 push">
-  	            <img class="embed__item" src="images/deimos.jpg" alt="">
-  	          </div>
-  	        </div>
+		<main>
+		  <div class="h1 text-center peta island-1-2 push">
+		      <h1 class="push-0">Moons Of Mars</h1>
+		  </div>
 
-  	        <div class="unit unit-xs-1 unit-s- unit-m-1 unit-l-1-2 gutter">
-  	          <h3 class="pad-t">Deimos</h3>
-  	          <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars.
-  With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
-  	        </div>
 
-  	        <div class="grid">
-  	          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
-  	            <dl>
-  	              <dt>Discovered by:</dt>
-  	              <dd>Asaph Hall/dd>
-  	              <dt>Discovery date:</dt>
-  	              <dd>August 17, 1877</dd>
-  	              <dt>Adjectives:</dt>
-  	              <dd>Deimosian</dd>
-  	            </dl>
-  	          </div>
-  	        </div>
-  	      </div>
-  	    </div>
+		  <div class="grid">
+		    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
+		      <div class="grid">
+		        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+		            <img class="embed__item" src="images/deimos.jpg" alt="">
+		        </div>
 
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
-	      <div class="grid">
-	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
-	          <div class="embed embed--1by1 push gutter">
-	            <img class="embed__item" src="images/Phobos.jpg" alt="">
-	          </div>
-	        </div>
-	        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 gutter">
-	          <h3 class="pad-t">Phobos</h3>
-	          <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km
-  and is seven times more massive than the outer moon, Deimos.</p>
-	        </div>
-	        <div class="grid">
-	          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
-	            <dl>
-	              <dt>Discovered by:</dt>
-	              <dd>Asaph Hall</dd>
-	              <dt>Discovery date:</dt>
-	              <dd>August 17, 1877</dd>
-	              <dt>Adjectives:</dt>
-	              <dd>Phobian</dd>
-	            </dl>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
 
-</main>
-</body>
+		        <div class="unit unit-xs-1 unit-s- unit-m-1 unit-l-1-2 gutter">
+		          <h3 class="pad-t">Deimos</h3>
+		          <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
+		        </div>
 
-</html>
+
+		        <div class="grid">
+		          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
+		            <dl>
+		              <dt class="micro">Discovered by:</dt>
+		              <dd>22.2 km</dd>
+		              <dt class="micro">Mass (kg):</dt>
+		              <dd>2×10 ^ 15 km</dd>
+		              <dt class="micro">Orbital period:</dt>
+		              <dd>30.35 h</dd>
+		            </dl>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+
+
+		    <div class="unit unit-xs-1 unit-s-1 unit-m-1-2">
+		      <div class="grid">
+		        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+		          <div class="embed embed--1by1 push gutter">
+		            <img class="embed__item" src="images/phobos.jpg" alt="">
+		          </div>
+		        </div>
+		        <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 gutter">
+		          <h3 class="pad-t">Venus’s Fake Moon 2</h3>
+		          <p>Look at all the pretty colours of this moon—mustn’t be real-colour.</p>
+		        </div>
+		        <div class="grid">
+		          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l gutter">
+		            <dl>
+		              <dt class="micro">Diameter (km):</dt>
+		              <dd>12.6 km</dd>
+		              <dt class="micro">Mass (kg):</dt>
+		              <dd>10.8×10 ^ 15 km</dd>
+		              <dt class="micro">Orbital period:</dt>
+		              <dd>7.66 h</dd>
+		            </dl>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
+
+
+	</body>
+
+
+	</html>
